syntax = "proto3";
import "repository_with_branch_query.proto";

option csharp_namespace = "RepoAnalisys.Grpc";

package repository;

service CompilationOperator {
  rpc VerifyProjectCompilation (RepositoryWithBranchQuery) returns (CompilationResponse);
}

message CompilationResponse {
  int32 score = 1;
}